longhorn/longhorn-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-busy
spec:
  selector: { matchLabels: { app: busy } }
  template:
    metadata: { labels: { app: busy } }
    spec:
      containers:
        - name: busy
          image: busybox:1.36
          command: [ "sh","-c","while true; do date >> /data/out.txt; sleep 5; done" ]
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: demo-pvc
